--- a/style.css
+++ b/style.css
@@ -72,8 +72,8 @@ section .container{
 section .foto{  
     position: center; 
     border-radius: 50%;
-    width: 320px;
-    height: 320px;
+    width: 315px;
+    height: 315px;
     border: 4px solid rgb(99,28,28);
 }
  h1{
@@ -81,7 +81,7 @@ section .foto{
     margin-top: 31px;
     margin-bottom: 8px;
 }
-p{
+h2{
     color: rgb(255, 255, 255);
 }
 ul{
@@ -90,21 +90,85 @@ ul{
 li{
     margin-bottom: 18px;
     list-style: none;
-}
+} 
+
 a{
-    background-color: rgb(99,28,28);
-    color: #eee;
-    padding: 15px;
+    position: relative;
+    background-color: rgb(85, 82, 82); 
+    color: white;
+    padding: 15px 30px;
     text-decoration: none;
-    display: block;
+    display: flex;
+    font-size: 1em;
+    letter-spacing: 0.1em;
     border-radius: 5px;
-}
-a:hover{
-    background-color: #000;
-    color:#eee ;
+    transition: 0.15s;
+    
 }
 
-footer{
-    color: #eee;
+
+a:hover{
+    letter-spacing: 0.30em;
+    background-color: rgb(193, 213, 12);
+    color:rgb(232, 225, 225) ;
 }
+
+a::before{
+    content: '';
+    position: absolute;
+    inset: 2px;
+    background: rgb(81, 4, 4);
+    border-radius: 5px;
+}
+a span{
+    position: relative;
+    z-index: 1;
+    width: 285px;
+    height: 20px;
+    background-color: transparent;
+}
+a i{
+   position: absolute;
+   inset: 0;
+   display: block; 
+}
+a i::before{
+    content: '';
+    position: absolute;
+    top: -3.5px;
+    left: 80%;
+    width: 10px;
+    height: 5px;
+    border: 2px solid rgb(255, 255, 255);
+    background: rgb(66, 66, 65);
+    transition: 0.5s;
+    border-radius: 3px;
+}
+a:hover i::before{
+    width: 20px;
+    left: 20%;
+
+}
+a i::after{
+    content: '';
+    position: absolute;
+    bottom: -3.5px;
+    left: 20%;
+    width: 10px;
+    height: 5px;
+    border: 2px solid rgb(255, 255, 255);
+    background: rgb(66, 66, 65);
+    transition: 0.5s;
+    border-radius: 3px;
+}
+a:hover i::after{
+    width: 20px;
+    left: 80%;
+}
+footer{
+    color: rgb(240, 240, 251);
+    padding: 8px;
+}
+
+
 
