--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ section .container{
     width: 320px;
     text-align: center;
     margin-top: 41px;
-    margin-left: -70px;
+    margin-left: 1%;
     margin-right: auto;
     align-items: top;
     display: flex;
