--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ section .container{
     position: absolute;
     width: 320px;
     text-align: center;
-    margin-top: 41px;
-    margin-left: 1%;
+    margin-top: 25px;
+    margin-left: auto;
     margin-right: auto;
     align-items: top;
     display: flex;
@@ -72,8 +72,8 @@ section .container{
 section .foto{  
     position: center; 
     border-radius: 50%;
-    width: 315px;
-    height: 315px;
+    width: 320px;
+    height: 320px;
     border: 4px solid rgb(99,28,28);
 }
  h1{
